turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:53: error: type mismatch;
 found   : (Array[Int], Array[Int])
 required: Array[Int]
    		rule = Array( Array( (Array(1,RIGHT,0), Array(1,RIGHT,1)), Array(Array(0,NOTURN,0), Array(0,NOTURN,1)) ) )
                                     ^